--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <nav>
           <% if user_signed_in? %>
             <ul>
+              <li><%= current_user.email%></li>
               <li><%= link_to "Home", root_path %></li>
               <li><%= link_to "Profile", user_path(current_user) %></li>
               <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
