--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
-<h1>研修アプリへようこそ</h1>
-<br>
-<ul>
-  <li><%= link_to "研修一覧",contents_path%></li>
-  <li><%= link_to "研修作成", new_content_path%></li>
-</ul>
+<div class = "welcome-board">
+  <h1 class = "welcome" >研修アプリへようこそ</h1>
+  <ul class = "content-lists">
+    <li class = "content"><%= link_to "研修一覧",contents_path%></li>
+    <li class = "content"><%= link_to "研修作成", new_content_path%></li>
+  </ul>
+</div>
