--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -89,5 +89,29 @@ aside form input[type="submit"] {
 
 .container {
   display: flex;
+}
+
+.welcome {
+  font-size: 24px;
+  margin-bottom: 16px;
+}
+
+.content-lists {
+  list-style: none;
+  display: flex;
+  margin-top: 30px;
   flex-wrap: wrap;
+}
+
+.content {
+  margin: 0 10px;
+  padding: 10px;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.content:hover {
+  transform: scale(1.1);
 }
