--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -1,45 +1,55 @@
-<h1>New Content</h1>
+<div class = "content-create">
+  <h1>New Content</h1>
+  <%= form_with(model: @content, local: true) do |form| %>
+    <% if @content.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@content.errors.count, "error") %> prohibited this content from being saved:</h2>
 
-<%= form_with(model: @content, local: true) do |form| %>
-  <% if @content.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@content.errors.count, "error") %> prohibited this content from being saved:</h2>
+        <ul>
+        <% @content.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-      <ul>
-      <% @content.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+    <div class="field">
+      <%= form.label :title %>
+      <%= form.text_field :title %>
+    </div>
+
+    <div class = "field">
+      <%= form.label :about %>
+      <%= form.text_field :about %>
+    </div>
+
+    <div class="field">
+      <%= form.label :category_id %>
+      <%= form.collection_select :category_id, Category.all, :id, :title, { prompt: '選択してください'} %>
+    </div>
+
+    <div class = "category-message">
+      <p>該当するカテゴリーがない場合、<%= link_to 'こちら', categories_path %>から登録してください。</p>
+    </div>
+
+    <div class="field">
+      <%= form.label :image %>
+      <%= form.text_field :image %>
+    </div>
+
+    <div class="field">
+      <%= form.label :description %>
+      <%= form.text_field :description %>
+    </div>
+
+    <div class="field">
+      <%= form.label :text %>
+      <%= form.rich_text_area :text %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :about %>
-    <%= form.text_field :about %>
-  </div>
-
-  <div class="field">
-    <%= form.label :category_id %>
-    <%= form.number_field :category_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :image %>
-    <%= form.text_field :image %>
-  </div>
-
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_field :description %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
 
