メインページ画像追加。保留

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,7 @@
 <div class = "welcome-board">
+  <div class = "main-image">
+    <%= image_tag "main-page.png"%>
+  </div>
   <h1 class = "welcome" >研修アプリへようこそ</h1>
   <ul class = "content-lists">
     <li class = "content"><%= link_to "研修一覧",contents_path%></li>
