--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -42,6 +42,11 @@
       <%= form.text_field :description %>
     </div>
 
+    <div class = "field">
+      <%= form.label :video%>
+      <%= form.file_field :video %>
+    </div>
+
     <div class="field">
       <%= form.label :text %>
       <%= form.rich_text_area :text %>
