--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,15 @@
-<p>Hello <%= @resource.email %>!</p>
+<%# メールの文仮　%>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
-
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p><%= @resource.email %> 様</p>
+<br>
+<hr>
+<br>
+<p>パスワードの変更がリクエストされました。以下のリンクから変更を行ってください。</p>
+<br>
+<p><%= link_to 'パスワードを変更する', edit_user_password_url(@resource, reset_password_token: @token) %></p>
+<br>
+<hr>
+<br>
+<p>もし、このリクエストをしていない場合は、このメールを無視してください。</p>
+<br>
+<p>リンク先にアクセスし、新しいパスワードを作成するまで、現在のパスワードは有効です。</p>
