カテゴリーから関連コンテンツへアクセス機能追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
       <ul>
         <% Category.all.each do |category| %>
           <% if category.contents.present? %>
-          <li><%= link_to category.title, content_path(category) %></li>
+          <li><%= link_to category.title, content_path(category.contents.first) %></li>
           <% end %>
         <% end %>
       </ul>
