--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -28,8 +28,8 @@
       </div>
 
       <div class="box-admin-id">
-        <%= f.label :adminId, "マネジメントID" %><br />
-        <%= f.text_field :adminId, autocomplete: "adminId" %>
+        <%= f.label :admin_id, "マネジメントID" %><br />
+        <%= f.text_field :admin_id, autocomplete: "admin_id" %>
       </div>
 
       <div class="actions">
