--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,9 +54,22 @@ nav ul li a {
   text-decoration: none;
 }
 
+.flash-notifications {
+  font-weight: bold;
+  text-align: center;
+
+  .notice {
+    background-color: #ADD8E6;
+  }
+
+  .alert {
+    background-color: #FF4500;
+  }
+
+}
+
 .container {
   display: flex;
-
 }
 
 /* Main content styles */
