--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -20,7 +20,8 @@
                     <div class = "content-description">
                       <%= content.description %>
                     </div>
-                    <div class="content-delete">
+                    <div class="content-update">
+                      <%= link_to "編集", edit_content_path(content) %>
                       <%= link_to "削除", content, method: :delete, data: { confirm: "本当に削除しますか?" } %>
                     </div>
                   </div>
