--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,13 +1,13 @@
 <%= form_with(model: @contact, url: confirm_path, local: true, html: {class: 'needs-validation', novalidate: true}) do |f| %>
   <div class="form-group">
     <%= f.label :name, 'お名前*' %>
-    <%= f.text_field :name, autofocus: true, class: 'form-control', required: true %>
+    <%= f.text_field :name, class: 'form-control', required: true %>
     <%= render 'shared/error_messages', object: @contact, attribute: :name %>
   </div>
 
   <div class="form-group">
     <%= f.label :email, 'メール*' %>
-    <%= f.email_field :email, autofocus: true, class: 'form-control', required: true %>
+    <%= f.email_field :email, class: 'form-control', required: true %>
     <%= render 'shared/error_messages', object: @contact, attribute: :email %>
   </div>
 
