--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -9,8 +9,8 @@
   </ul>
   <div class = "search">
     <%= search_form_for @q, url: search_contents_path do |f| %>
-      <%= f.label :title_or_description_gt, 'キーワードを入力してください' %>
-      <%= f.search_field :title_or_description_gt %>
+      <%= f.label :title_or_description_cont_any, 'キーワードを入力してください' %>
+      <%= f.search_field :title_or_description_cont_any %>
       <br>
       <%= f.submit '検索' %>
     <% end %>
