--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -28,6 +28,11 @@
       <%= form.file_field :video %>
     </div>
 
+    <div class = "field">
+      <%= form.label :youtube_url%>
+      <%= form.text_field :youtube_url %>
+    </div>    
+
     <div class="field">
       <%= form.label :text %>
       <%= form.rich_text_area :text %>
