--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -38,10 +38,12 @@
                     <div class = "content-description">
                       <%= content.description %>
                     </div>
-                    <div class="content-update">
-                      <%= link_to "編集", edit_content_path(content) %>
-                      <%= link_to "削除", content, method: :delete, data: { confirm: "本当に削除しますか?" } %>
-                    </div>
+                    <% if current_user.admin? %>
+                      <div class="content-update">
+                        <%= link_to "編集", edit_content_path(content) %>
+                        <%= link_to "削除", content, method: :delete, data: { confirm: "本当に削除しますか?" } %>
+                      </div>
+                    <% end %>
                   </div>
                 </div>
               </div>
