--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -4,8 +4,10 @@
     </div>
     <div class="content-detail">
       <div class="content-update">
+      <% if current_user.admin? %>
         <%= link_to "編集", edit_content_path(@content) %>
         <%= link_to "削除", @content, method: :delete, data: { confirm: "本当に削除しますか?" } %>
+      <% end %>
       </div>
       <h2 class="content-title"><%= @content.title %></h2>
       <p class="content-description"><%= @content.description %></p>
