--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Login", new_user_session_path %></li>
             <li><%= link_to "Sign up", new_user_registration_path %></li>
+            <li><%= link_to "admin", new_admin_registration_path %></li>
           </ul>
         <% end %>
       </nav>
