--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="user-info">
   <p>email: <%= @user.email %></p>
-  <p>Admin ID: <%= @user.admin_id %></p>
+  <p>Project ID: <%= @user.project_id %></p>
   <%= link_to "アカウントを編集する", edit_user_registration_path, class: "btn btn-primary" %>
 </div>
