--- a/app/views/admins/mailer/reset_password_instructions.html.erb
+++ b/app/views/admins/mailer/reset_password_instructions.html.erb
@@ -6,7 +6,7 @@
 <br>
 <p>パスワードの変更がリクエストされました。以下のリンクから変更を行ってください。</p>
 <br>
-<p><%= link_to 'パスワードを変更する', edit_user_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'パスワードを変更する', edit_admin_password_url(@resource, reset_password_token: @token) %></p>
 <br>
 <hr>
 <br>
