--- a/app/views/admins/registrations/edit.html.erb
+++ b/app/views/admins/registrations/edit.html.erb
@@ -9,11 +9,10 @@
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
 
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div class="box-email">
-          <p>アカウント確認用のメールが送信されています。変更内容が有効になるには、メール内のリンクをクリックして確認してください。</p>
-        </div>
-      <% end %>
+      <div class="box-password">
+        <%= f.label :current_password,"現在のパスワード"%> <i>(変更を完了するには登録しているパスワードを入力してください)</i><br />
+        <%= f.password_field :current_password, autocomplete: "current-password" %>
+      </div>
 
       <div class="actions">
         <%= f.submit "変更を保存する" %>
