--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <div class = "category-message">
-      <p>該当するカテゴリーがない場合、<%= link_to 'こちら', categories_path %>から登録してください。</p>
+      <p>該当するカテゴリーがない場合、<%= link_to 'ここ', categories_path %>から登録してください。</p>
     </div>
 
     <div class="field">
