--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
+@import "bootstrap";
 
 * {
   margin: 0;
@@ -55,6 +56,7 @@ nav ul li a {
 }
 
 .flash-notifications {
+  position: absolute;
   font-weight: bold;
   text-align: center;
 
