--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,13 +2,17 @@
   <div class = "main-image">
     <%= image_tag "main-page.png"%>
   </div>
-  <h1 class = "welcome" >研修アプリへようこそ</h1>
-  <ul class = "content-lists">
+  <div class = "login-contents">
     <% if admin_signed_in? %>
-    <li class = "content"><%= link_to "研修一覧",contents_path%></li>
-    <li class = "content"><%= link_to "研修作成", new_content_path%></li>
+      <ul class = "content-lists">
+      <li class = "content"><%= link_to "研修一覧",contents_path%></li>
+      <li class = "content"><%= link_to "研修作成", new_content_path%></li>
+      </ul>
     <% elsif user_signed_in?  %>
-    <li class = "content"><%= link_to "研修一覧",contents_path%></li>
+      <ul class = "content-lists">
+      <li class = "content"><%= link_to "研修一覧",contents_path%></li>
+      </ul>
     <% end %>
-  </ul>
+  </div>
+  <%= render 'home/about'%>
 </div>
