--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,12 @@
   margin-right: 0.5rem;
 }
 
+footer {
+  background-color: black;
+  color: white;
+  padding: 1rem;
+}
+
 .container {
   display: flex;
 }
