--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,16 +3,19 @@
     <%= image_tag "main-page.png"%>
   </div>
   <div class = "login-contents">
-    <% if admin_signed_in? %>
-      <ul class = "content-lists">
-      <li class = "content"><%= link_to "研修一覧",contents_path%></li>
-      <li class = "content"><%= link_to "研修作成", new_content_path%></li>
-      </ul>
-    <% elsif user_signed_in?  %>
-      <ul class = "content-lists">
-      <li class = "content"><%= link_to "研修一覧",contents_path%></li>
-      </ul>
-    <% end %>
+  <div class="login-contents">
+  <% if admin_signed_in? %>
+    <div class="btn-group-vertical d-flex justify-content-center">
+      <%= link_to "研修一覧", contents_path, class: "btn btn-primary" %>
+      <%= link_to "研修作成", new_content_path, class: "btn btn-primary" %>
+    </div>
+  <% elsif user_signed_in? %>
+    <div class="btn-group-vertical d-flex justify-content-center">
+      <%= link_to "研修一覧", contents_path, class: "btn btn-primary mt-3" %>
+    </div>
+  <% end %>
+</div>
+
   </div>
   <%= render 'home/about'%>
 </div>
