--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -95,3 +95,28 @@
   font-size: 2.5rem;
   margin-right: 0.5rem;
 }
+
+.btn-group-vertical {
+  max-width: 800px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+  .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    font-size: 18px;
+    padding: 0 20px;
+  }
+
+  .btn i {
+    font-size: 24px;
+    margin-right: 10px;
+  }
+
+  .btn:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
