--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,9 @@
             <%= link_to "Profile", user_path(current_user), class: "nav-link" %>
           </li>
           <li class="nav-item">
+            <%= link_to "研修一覧", contents_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
             <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
           </li>
           <li class="nav-item">
@@ -25,6 +28,12 @@
           </li>
           <li class="nav-item">
             <%= link_to "Profile", admin_path(current_admin), class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "研修一覧", contents_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "研修作成", new_content_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Logout", destroy_admin_session_path, method: :delete, class: "nav-link" %>
