--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,23 +1,30 @@
-<%= form_with(model: @contact, url: confirm_path, local: true, html: {class: 'needs-validation', novalidate: true}) do |f| %>
-  <div class="form-group">
-    <%= f.label :name, 'お名前*' %>
-    <%= f.text_field :name, class: 'form-control', required: true %>
-    <%= render 'shared/error_messages', object: @contact, attribute: :name %>
-  </div>
+<div class = "contact-wrapper">
 
-  <div class="form-group">
-    <%= f.label :email, 'メール*' %>
-    <%= f.email_field :email, class: 'form-control', required: true %>
-    <%= render 'shared/error_messages', object: @contact, attribute: :email %>
-  </div>
+<h2>
+  <%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>
+</h2>
 
-  <div class="form-group">
-    <%= f.label :content, 'メッセージ*' %>
-    <%= f.text_area :content, rows: 5, class: 'form-control', required: true %>
-    <%= render 'shared/error_messages', object: @contact, attribute: :content %>
-  </div>
+  <%= form_with(model: @contact, url: confirm_path, local: true, html: {class: 'needs-validation', novalidate: true}) do |f| %>
+    <div class="form-group">
+      <%= f.label :name, 'お名前*' %>
+      <%= f.text_field :name, class: 'form-control', required: true %>
+      <%= render 'shared/error_messages', object: @contact, attribute: :name %>
+    </div>
 
-  <div>
-    <%= f.submit '入力内容確認', class: 'btn btn-primary' %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <%= f.label :email, 'メール*' %>
+      <%= f.email_field :email, class: 'form-control', required: true %>
+      <%= render 'shared/error_messages', object: @contact, attribute: :email %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :content, 'メッセージ*' %>
+      <%= f.text_area :content, rows: 5, class: 'form-control', required: true %>
+      <%= render 'shared/error_messages', object: @contact, attribute: :content %>
+    </div>
+
+    <div>
+      <%= f.submit '入力内容確認', class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+</div>
