--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,5 @@
+<%= react_component("samples/HelloWorld", { greeting: "Hello from react-rails." }) %>
+
 <%= form_with(model: @contact, url: confirm_path, local: true, html: {class: 'needs-validation', novalidate: true}) do |f| %>
   <div class="form-group">
     <%= f.label :name, 'お名前*' %>
@@ -21,4 +23,3 @@
     <%= f.submit '入力内容確認', class: 'btn btn-primary' %>
   </div>
 <% end %>
-<%test%>
