--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,3 +1,5 @@
+<%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>
+
 <%= form_with(model: @contact, url: confirm_path, local: true, html: {class: 'needs-validation', novalidate: true}) do |f| %>
   <div class="form-group">
     <%= f.label :name, 'お名前*' %>
