--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,3 +88,11 @@ aside form input[type="submit"] {
   background-color: #333;
   color: #fff;
 }
+
+.page-title-react {
+  margin-bottom: 20px;
+}
+
+.page-title-react h2 {
+  text-align: left;
+}
