--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,21 +1,20 @@
 <div class = "welcome-board">
   <div class = "main-image">
-    <%= image_tag "main-page.png"%>
+    <%= image_tag "main-page.png", class: "img-fluid" %>
   </div>
   <div class = "login-contents">
-  <div class="login-contents">
-  <% if admin_signed_in? %>
-    <div class="btn-group-vertical d-flex justify-content-center">
-      <%= link_to "研修一覧", contents_path, class: "btn btn-primary" %>
-      <%= link_to "研修作成", new_content_path, class: "btn btn-primary" %>
+    <div class="login-contents">
+      <% if admin_signed_in? %>
+        <div class="btn-group-vertical d-flex justify-content-center">
+          <%= link_to "研修一覧", contents_path, class: "btn btn-primary" %>
+          <%= link_to "研修作成", new_content_path, class: "btn btn-primary" %>
+        </div>
+      <% elsif user_signed_in? %>
+        <div class="btn-group-vertical d-flex justify-content-center">
+          <%= link_to "研修一覧", contents_path, class: "btn btn-primary mt-3" %>
+        </div>
+      <% end %>
     </div>
-  <% elsif user_signed_in? %>
-    <div class="btn-group-vertical d-flex justify-content-center">
-      <%= link_to "研修一覧", contents_path, class: "btn btn-primary mt-3" %>
-    </div>
-  <% end %>
-</div>
-
   </div>
   <%= render 'home/about'%>
 </div>
