--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,11 @@
-<div class = "welcome-board">
-  <div class = "main-image">
-    <%= image_tag "main-page.png", class: "img-fluid" %>
+<div class="welcome-board">
+  <div class="main-image">
+    <img src="/assets/main-page.png" class= "img-fluid" style="width: 100">
   </div>
-  <div class = "login-contents">
+  <div class="welcome-header">
+    <h1><span class="marker_yellow">３つの時間を無くしませんか？</span></h1>
+  </div>
+  <%= render 'home/card'%>
     <div class="login-contents">
       <% if admin_signed_in? %>
         <div class="btn-group-vertical d-flex justify-content-center">
@@ -15,6 +18,5 @@
         </div>
       <% end %>
     </div>
-  </div>
   <%= render 'home/about'%>
 </div>
