--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-expand-lg navbar-dark bg-dark">
+<header class="navbar navbar-expand-lg navbar-dark" style="background-color: #D2691E;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">研修メーカー</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,51 +8,51 @@
       <ul class="navbar-nav ms-auto">
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to "Home", root_path, class: "nav-link" %>
+            <%= link_to "Home", root_path, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Profile", user_path(current_user), class: "nav-link" %>
+            <%= link_to "Profile", user_path(current_user), class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "研修一覧", contents_path, class: "nav-link" %>
+            <%= link_to "研修一覧", contents_path, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %>
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "お問合せ", new_contact_path, class: "nav-link" %>
+            <%= link_to "お問合せ", new_contact_path, class: "nav-link active" %>
           </li>
         <% elsif admin_signed_in? %>
           <li class="nav-item">
-            <%= link_to "Home", root_path, class: "nav-link" %>
+            <%= link_to "Home", root_path, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Profile", admin_path(current_admin), class: "nav-link" %>
+            <%= link_to "Profile", admin_path(current_admin), class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "研修一覧", contents_path, class: "nav-link" %>
+            <%= link_to "研修一覧", contents_path, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "研修作成", new_content_path, class: "nav-link" %>
+            <%= link_to "研修作成", new_content_path, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Logout", destroy_admin_session_path, method: :delete, class: "nav-link" %>
+            <%= link_to "Logout", destroy_admin_session_path, method: :delete, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "お問合せ", new_contact_path, class: "nav-link" %>
+            <%= link_to "お問合せ", new_contact_path, class: "nav-link active" %>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Home", root_path, class: "nav-link" %>
+            <%= link_to "Home", root_path, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "ログインはこちら", new_user_session_path, class: "nav-link" %>
+            <%= link_to "ログインはこちら", new_user_session_path, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "管理者はこちら", new_admin_session_path, class: "nav-link" %>
+            <%= link_to "管理者はこちら", new_admin_session_path, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "お問合せ", new_contact_path, class: "nav-link" %>
+            <%= link_to "お問合せ", new_contact_path, class: "nav-link active" %>
           </li>
         <% end %>
       </ul>
