--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,7 @@
 <footer>
+  <div class="footer-logo">
+    <%= link_to("研修メーカー", root_path, id: "navbar-footer") %>
+  </div>
   <div class="contact">
     <p>お問い合わせは <%= link_to "こちら", new_contact_path %></p>
   </div>
