--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,6 +67,8 @@ main {
   align-items: center;
   background-color: #fff;
   flex-grow: 1;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 /* Aside styles */
