--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,34 +2,32 @@
   <div class = "box-inner">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "users/shared/error_messages", resource: resource %>
-      <h2>新規作成</h2>
+      <%= react_component("PageTitle", { title: "会員登録(利用者)" }) %>
       <div class="box-email">
-        <%= f.label :email, "メールアドレス" %><br />
+        <%= f.label :email, "メールアドレス" %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
       <div class="box-password">
         <%= f.label :password, "パスワード" %>
         <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> 文字以上)</em>
-        <% end %><br />
+        <p>(<%= @minimum_password_length %> 文字以上)</p>
+        <% end %>
         <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
       <div class="box-confirm">
-        <%= f.label :password_confirmation, "パスワード（確認）" %><br />
+        <%= f.label :password_confirmation, "パスワード（確認）" %>
         <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
       </div>
       <div class="box-admin-id">
-        <%= f.label :project_id, "マネジメントID" %><br />
+        <%= f.label :project_id, "マネジメントID" %>
         <%= f.text_field :project_id, autocomplete: "project_id" %>
       </div>
       <div class="actions">
         <%= f.submit "アカウントを作成する" %>
       </div>
     <% end %>
-
-    <div class = "login">
-      <p>アカウントをお持ちの方はこちら</p>
-      <%= render "users/shared/links" %>
+    <div class = "actions-link">
+      <p>アカウントをお持ちの方は<%= link_to "こちら", new_session_path(resource_name), class: "devise-link" %></p>
     </div>
   </div>
 </div>
