--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -5,17 +5,17 @@
       <h2>アカウント情報の編集</h2>
 
       <div class="box-email">
-        <%= f.label :email, "メールアドレス" %><br />
+        <%= f.label :email, "メールアドレス" %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
 
       <div class="box-admin-id">
-        <%= f.label :project_id, "マネジメントID" %><br />
+        <%= f.label :project_id, "マネジメントID" %>
         <%= f.text_field :project_id, autocomplete: "project_id", id: "user_project_id" %>
       </div>
 
       <div class="box-password">
-        <%= f.label :current_password,"現在のパスワード"%> <i>(変更を完了するには登録しているパスワードを入力してください)</i><br />
+        <%= f.label :current_password,"現在のパスワード"%> <i>(変更を完了するには登録しているパスワードを入力してください)</i>
         <%= f.password_field :current_password, autocomplete: "current-password" %>
       </div>
 
